# testing-rl-2

./: .gitignore  README.md  Snakefile  analyse-results.ipynb  experiments.yaml  pyproject.toml  work_summary.md
scripts/: compare_rewards.py  eval_all.py  lqg_agent.py  lqr_agent.py  plot_utils.py  run_model.py  train.py  train_a2c.py  train_ppo.py  train_sac.py  train_td3.py  train_tqc.py
