[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "testing-rl-2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "stable-baselines3[extra]",
    "gymnasium",
    "numpy",
    "snakemake",
]

# gym-CartPole-bt must be installed separately:
#   cd ~/path/to/gym-CartPole-bt && pip install -e .

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
